# asmqdm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
examples/: basic_usage.py
src/asm/: asmqdm.asm
src/asm/include/: constants.inc
src/python/asmqdm/: __init__.py  _ffi.py  core.py
tests/: benchmark.py  run_tests.py  test_asmqdm.py
