[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asmqdm"
version = "0.1.0"
description = "x86_64 Assembly implementation of tqdm progress bar"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Assembly",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["progress", "bar", "tqdm", "assembly", "x86_64"]
requires-python = ">=3.8"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
asmqdm = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
